# Balancer

./: .gitignore
Control/data/raw/: trim_S50_blockSupport_stepTest_2026-04-26_run01.csv  trim_S50_blockSupport_stepTest_2026-04-26_run02.csv  trim_S50_blockSupport_stepTest_2026-04-26_run03.csv  trim_S50_blockSupport_stepTest_2026-04-26_run04.csv  trim_S50_blockSupport_stepTest_2026-04-26_run05.csv
Control/identification/: requirements.txt
Control/identification/dynamics/: sippy_test.py
Control/identification/trim/: trimDataPlotter.py
Electrical/CarrierBoard/: CarrierBoard-job.gbrjob  CarrierBoard.kicad_pcb  CarrierBoard.kicad_prl  CarrierBoard.kicad_pro  CarrierBoard.kicad_sch  fp-lib-table  sym-lib-table
Electrical/CarrierBoard/exports/3d_model/: CarrierBoard.step
Electrical/CarrierBoard/exports/BOM/: .~lock.CarrierBoard.csv#  CarrierBoard.csv
Electrical/CarrierBoard/exports/gerbers/: CarrierBoard-B_Cu.gbr  CarrierBoard-B_Mask.gbr  CarrierBoard-B_Paste.gbr  CarrierBoard-B_Silkscreen.gbr  CarrierBoard-Edge_Cuts.gbr  CarrierBoard-F_Cu.gbr  CarrierBoard-F_Mask.gbr  CarrierBoard-F_Paste.gbr  CarrierBoard-F_Silkscreen.gbr  CarrierBoard-NPTH.drl  CarrierBoard-PTH.drl  CarrierBoard-job.gbrjob
Mechanical/CAD/Parts/Custom/: Bar.step  Frame.step
Mechanical/CAD/Parts/Imported/608 ZZ Bearings/: 608 ZZ Skateboard Bearing v4.f3d  608 ZZ Skateboard Bearing.3mf  608 ZZ Skateboard Bearing.step
Mechanical/CAD/Parts/Imported/8060 Propeller Blades/: EP-8060.IGS  EP-8060.SLDPRT  EP-8060.STEP  EP-8060.STL  EP-8060.x_t
Mechanical/CAD/Parts/Imported/A2212 BLDC Motor/: A2212 BLDC Motor v1.f3d
Software/: .gitignore  Balancer.ioc  CMakeLists.txt  build.sh  flash.cfg
Software/Core/Inc/: main.h  stm32f1xx_it.h
Software/Core/Src/: main.c  stm32f1xx_hal_msp.c  stm32f1xx_it.c
Software/Project/App/: CMakeLists.txt
Software/Project/App/Apps/inc/: App.hpp  SystemIdentificationApp.hpp  TrimIdentificationApp.hpp
Software/Project/App/Apps/src/: App.cpp  SystemIdentificationApp.cpp  TrimIdentificationApp.cpp
Software/Project/App/inc/: App.hpp  AppConfig.h  SystemIdentificationApp.hpp  TrimIdentificationApp.hpp  app_main.h
Software/Project/App/src/: App.cpp  SystemIdentificationApp.cpp  TrimIdentificationApp.cpp  app_main.cpp
Software/Project/Common/: CMakeLists.txt
Software/Project/Common/inc/: Callback.h  Constants.h
Software/Project/Middleware/: CMakeLists.txt
Software/Project/Middleware/Communication/: CMakeLists.txt
Software/Project/Middleware/Communication/Transmitter/inc/: Transmitter.hpp
Software/Project/Middleware/Communication/Transmitter/src/: Transmitter.cpp
Software/Project/Middleware/Control/: CMakeLists.txt
Software/Project/Middleware/Devices/: CMakeLists.txt
Software/Project/Middleware/Devices/IMU/inc/: IMU.hpp  IMUConfig.h
Software/Project/Middleware/Devices/IMU/src/: IMU.cpp
Software/Project/Middleware/Devices/LED/inc/: LED.hpp  LEDConfig.h
Software/Project/Middleware/Devices/Motor/inc/: Motor.hpp  MotorConfig.h
Software/Project/Middleware/Devices/Motor/src/: Motor.cpp
Software/Project/Middleware/Math/: CMakeLists.txt
Software/Project/Middleware/Observers/: CMakeLists.txt
Software/Project/Middleware/Services/: CMakeLists.txt
Software/Project/Middleware/Services/Delay/inc/: Delay.hpp
Software/Project/Middleware/Services/Delay/src/: Delay.cpp
Software/Project/Middleware/Services/Timer/inc/: Timer.hpp  TimerConfig.h
Software/Project/Middleware/Services/Timer/src/: Timer.cpp
Software/Project/Middleware/inc/: IMU.hpp  IMUConfig.h  LEDConfig.h  Motor.hpp  MotorConfig.h  Timer.hpp  TimerConfig.h  Transmitter.hpp
Software/Project/Middleware/src/: IMU.cpp  LED.cpp
Software/Project/Peripherals/: CMakeLists.txt
Software/Project/Peripherals/MPU6050/inc/: MPU6050.h  MPU6050_Driver.h
Software/Project/Peripherals/MPU6050/src/: MPU6050_Driver.c
Software/Project/Platform/: CMakeLists.txt
Software/Project/Platform/Host/: CMakeLists.txt
Software/Project/Platform/STM32F103C8T6/: CMakeLists.txt
Software/Project/Platform/STM32F103C8T6/inc/: STM32_GPIO.h  STM32_I2C.h  STM32_PWM.h  STM32_TIM.h
Software/Project/Platform/STM32F103C8T6/src/: STM32_GPIO.c  STM32_I2C.c  STM32_PWM.c  STM32_TIM.c  STM32_USB.c  STM32_delay.c
Software/Project/Platform/inc/: GPIO.h  I2C.h  PWM.h  TIM.h  USB.h  delay.h
Software/cmake/toolchains/: Host_toolchain.cmake  STM32F103C8T6_toolchain.cmake
Software/tests/: CMakeLists.txt
Software/tests/App/: App_test.cpp
